feat: adjust approve amount pr

--- a/CheckingSupplierEmail/appsettings.json
+++ b/CheckingSupplierEmail/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ERP": "Server=erpserver;Database=iERP85;User ID=sb;Password=9xRZuc)7pI12B5;TrustServerCertificate=True;",
-    "UICT": "Server=192.168.100.105\\UICT;Database=UICT;User ID=sa_07;Password=c_g.@l9lLmxt5sB4Wk4@;TrustServerCertificate=True;"
+    "UICT": "Server=192.168.100.105\\UICT;Database=UICT;User ID=sa_07;Password=c_g.@l9lLmxt5sB4Wk4@;TrustServerCertificate=True;",
+    "UICT2": "Server=192.168.100.104\\UICT2;Database=UICT2;User ID=sa_07;Password=c_g.@l9lLmxt5sB4Wk4@;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "CookieName": "purvenportal_jwt",
@@ -19,6 +20,6 @@
     "ExpiryInHours": 24
   },
   "Application": {
-    "Version": "202510131130" // Update this when deploying a new version, use in jwt refresh
+    "Version": "202602020800" // Update this when deploying a new version, use in jwt refresh
   }
 }
